Refactor SecurityConfig for JWT filter and CORS settings